fixed spacing issue with nav bar

--- a/src/components/MainNavigationBar/styles.css
+++ b/src/components/MainNavigationBar/styles.css
@@ -1,25 +1,25 @@
-.mainNavigationBar{
+.main_navigation_bar{
     margin: auto;
     margin-top: 2%;
 }
 
-.mainNavigationBar ul{
+.main_navigation_bar ul.main_navigation_bar_list{
     margin: auto;
 }
 
-.mainNavigationBar ul li{
-    margin: 0;
+.main_navigation_bar ul.main_navigation_bar_list li{
+    margin: 0 1ch;
     padding: 0;
 }
 
-.mainNavigationBar ul li a{
+.main_navigation_bar ul.main_navigation_bar_list li a{
     font-style: normal;
     text-decoration: none;
     color: var(--color-text-secondary);
     opacity: 0.6;
 }
 
-.mainNavigationBar ul li a:hover{
+.main_navigation_bar ul.main_navigation_bar_list li a:hover{
     color:var(--color-text-secondary);
     opacity:0.85;
 }
